apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__array-2.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: paths
---
[
    Path(
        [
            Key(
                "topProducts",
            ),
            Key(
                "publicReviews",
            ),
            Flatten,
            Key(
                "author",
            ),
        ],
    ),
]
