apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__fragment_becomes_unused.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            topProducts {
                type
                reviews {
                    ...F
                }
            }
        }

        fragment F on Review {
            body
        }
        
filtered:
query {
  topProducts {
    type
  }
}

paths: ["/topProducts/reviews/@"]
