apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__implementations_with_different_field_auth.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

          query Anonymous {
            test
            intf(id: "1") {
              id
              name
            }
          }
        
filtered:
query Anonymous {
  test
  intf(id: "1") {
    name
  }
}

paths: ["/intf/id"]
