apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__authenticated__tests__interface_field.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
expression: doc
---
query {
  test
  itf {
    other
  }
}

